# Whister

./: .gitignore  BACKEND_STATUS.md  DOCKER_STARTUP.md  DOCUMENTATION_INDEX.md  FRONTEND_SETUP_SUMMARY.md  GROUP_MANAGEMENT_AND_ANALYTICS_SPECIFICATIONS.md  LICENSE  README.md  REMAINING_FIXES_GUIDE.md  SESSION_SUMMARY.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
alembic/versions/: 001_initial_schema.py
app/api/: auth.py  groups.py
app/core/: database.py  rate_limiter.py  redis.py
app/middleware/: logging.py
app/models/: __init__.py  base.py  game.py  stats.py
app/schemas/: auth.py  errors.py
app/services/: auth_service.py  group_service.py  room_code_generator.py  scoring_service.py
app/websocket/: game_events.py  schemas.py  server.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  test_login_debug.py
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  rooms.py  router.py  users.py
backend/app/core/: error_handlers.py  exceptions.py  rate_limiter.py  security.py
backend/app/dependencies/: auth.py  database.py  redis.py  services.py
backend/app/models/: game.py  group.py  round.py  user.py
backend/app/schemas/: __init__.py  auth.py  game.py  group.py  room.py  user.py
backend/app/services/: analytics_service.py  auth_service.py  bidding_service.py  group_service.py  room_service.py  user_service.py
backend/app/websocket/: connection_context.py  game_events.py  room_manager.py  schemas.py  server.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_gameplay.py  test_scoring.py
backend/tests/integration/: conftest.py  test_auth_flow.py
docs/: BACKEND_IMPLEMENTATION_COMPLETE.md  backend-api-lld.md  database-schema-lld.md  frontend-lld.md  game-rules-reference.md  websocket-events-lld.md  whist-platform-hld.md
frontend/: .eslintrc.json  COMPONENTS_INDEX.md  DELIVERABLES.md  README.md  SETUP_VERIFICATION.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend-app/: .gitignore  COMPONENTS_SUMMARY.md  tsconfig.tsbuildinfo
frontend-app/app/: globals.css  layout.tsx  page.tsx
frontend-app/app/test/: page.tsx
frontend-app/components/auth/: login-form.tsx  register-form.tsx
frontend-app/components/bidding/: frisch-indicator.tsx  suit-selector.tsx  trump-bidding-panel.tsx
frontend-app/components/game/: admin-controls.tsx  player-progress-ring.tsx
frontend-app/components/room/: index.ts  join-room-form.tsx
frontend-app/components/scores/: score-table.tsx
frontend-app/components/shared/: avatar.tsx  connection-status.tsx  loading-spinner.tsx
frontend-app/components/ui/: button.tsx  card.tsx  dialog.tsx  index.ts  select.tsx
frontend-app/config/: animations.ts  breakpoints.ts
frontend-app/hooks/: use-auth.ts  use-game.ts
frontend-app/lib/validation/: rules.ts
frontend-app/stores/: index.ts
frontend-app/stores/middleware/: devtools.ts
frontend-app/stores/selectors/: index.ts
frontend-app/stores/slices/: auth-slice.ts  bidding-slice.ts  index.ts  room-slice.ts
frontend-app/types/: game.ts  socket-events.ts  store.ts
frontend/__tests__/integration/: auth-flow.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/components/bidding/: bid-counter.tsx  contract-bidding-panel.tsx  index.ts  player-bid-status.tsx
frontend/components/game/: all-players-progress.tsx  game-header.tsx  index.ts  round-summary-modal.tsx  trick-claim-button.tsx  trick-counter.tsx
frontend/components/room/: join-room-form.tsx  player-card.tsx  player-list.tsx  room-code-display.tsx
frontend/components/scores/: score-cell.tsx
frontend/components/shared/: avatar.tsx  (+2 more)
frontend/config/: constants.ts
frontend/hooks/: use-auth.ts  use-bidding.ts  use-game.ts  use-hydration.ts  use-room.ts  use-socket-event.ts  use-socket.ts
frontend/stores/: index.ts
frontend/types/: socket-events.ts  store.ts
tests/: conftest.py  test_bidding.py  test_groups.py  test_rooms.py  test_users.py  test_websocket.py
whist_backend/schemas/: __init__.py  base.py  cache.py  game.py  group.py  round.py  stats.py  user.py
(+24 files in other folders)
